--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --communication-color: rgba(255, 255, 255, 0.6);
   --button-text-color: #ffffff;
   --primary-fill: #afb1b8;
+  --comm-fill: #757575;
   --social-link-fill: #ffffff;
   --title-text-color: #212121;
   --primary-font: 'Roboto', sans-serif;
@@ -104,7 +105,6 @@ img {
 .head-container {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
 }
 
 /* Логотип */
@@ -162,19 +162,19 @@ img {
 .comm-item + .comm-item {
   margin-left: 30px;
 }
-.comm-item:hover,
-.comm-item:focus {
-  fill: var(--hover-cont-link);
-}
+
 .comm-link {
   display: flex;
   align-items: center;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  fill: var(--comm-fill);
 }
+
 .comm-link:hover,
 .comm-link:focus {
   color: var(--hover-cont-link);
+  fill: var(--hover-cont-link);
 }
 
 .icon-mail {
@@ -231,9 +231,10 @@ img {
   padding-bottom: 10px;
   padding-left: 32px;
   min-width: 200px;
-  border-radius: 4px;
 
   background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
@@ -393,6 +394,7 @@ img {
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  fill: var(--primary-fill);
 }
 .client-link:hover,
 .client-link:focus {
@@ -402,7 +404,6 @@ img {
 .client-icon {
   width: 106px;
   height: 60px;
-  color: var(--primary-fill);
 }
 
 /* Footer */
@@ -475,7 +476,7 @@ img {
   padding: 12px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  fill: var(--button-text-color);
+  fill: var(--social-link-fill);
 }
 .footer-link-social:hover,
 .footer-link-social:focus {
@@ -488,7 +489,7 @@ img {
 
 /* ПОРТФОЛИО */
 /* Основной контент страници */
-/* Навигация по проектам */
+/* Фильтр по нашим проектам */
 .servece-list {
   display: flex;
   justify-content: center;
@@ -513,6 +514,8 @@ img {
 .service-button:focus {
   color: var(--button-text-color);
   background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .list-btn + .list-btn {
   margin-left: 8px;
@@ -529,6 +532,12 @@ img {
   margin-top: var(--card-set-gap);
   margin-left: var(--card-set-gap);
   flex-basis: calc(100% / 3 - var(--card-set-gap));
+  cursor: pointer;
+}
+.ourpjc-list:hover,
+.ourpjc-list:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .ourprj-title {
   font-weight: bold;
